syntax = "proto3";                // Protobuf dialect used (proto2 / proto3)

option java_multiple_files = true; // Generate each message/service in its own class
option java_package = "org.crolopez.grpcplayground.greeter"; // Java package for the generated classes
option java_outer_classname = "GreeterProto"; // If java_multiple_files = false, this would be the wrapper

service Greeter {                 // RPC service definition
  rpc SayHello (HelloRequest)     //      - Method name
      returns (HelloReply);       //      - Request and response types
}

message HelloRequest {            // A serializable "POJO"
  string name = 1;                // Field 1, type string, name "name"
}

message HelloReply {
  string message = 1;             // Field 1, contains the calculated greeting
}
